--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "1. Compute interest points/regions in all images independently\n",
     "2. For each interest point/region compute a descriptor of their neigborhood (local patch).\n",
-    "3. Establish tentative corresponces between interest points based on their descriptors.\n",
+    "3. Establish tentative correspondences between interest points based on their descriptors.\n",
     "4. Robustly estimate geometric relation between two images based on tentative correspondences with RANSAC.\n",
     "\n",
     "The reason of steps 1 and 2 done on the both images separately is that in general wide baseline stereo is not limited to pairs of images, but rather to a collections of them. If all the steps are done pairwise, then the computational complexity is $O(n^2)$. The more steps done seperately - the more efficient algorithm is."
