updated modern WBS example

--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -152,9 +152,16 @@
     "\n",
     "Similar ideas are now explored for ensuring adversarial robustness of CNNs\\cite{li2020extreme}.\n",
     "\n",
+    "\n",
+    "Another way of using \"consensus of local independent predictions\" is used in [Cross-transformers](https://arxiv.org/abs/2007.11498) paper: spatial attention helps to select relevant feature for few-shot learning, see Figure below. \n",
+    "\n",
     "While wide baseline stereo is far from the mainstream now, it continues to play an important role in computer vision.\n",
     "\n",
-    "![](00_intro_files/capsules.png \"Capsule networks: revisiting the WBS idea. Each feature response is accompanied with its pose. Poses should be in agreement, otherwise object would not be recognized. Image by Aurélien Géron https://www.oreilly.com/content/introducing-capsule-networks/\")"
+    "![](2020-03-27-intro_files/att_00000.png \"Cross-transformers: spatial attention helps to select relevant feature for few-shot learning\")\n",
+    "\n",
+    "\n",
+    "![](00_intro_files/capsules.png \"Capsule networks: revisiting the WBS idea. Each feature response is accompanied with its pose. Poses should be in agreement, otherwise object would not be recognized. Image by Aurélien Géron https://www.oreilly.com/content/introducing-capsule-networks/\")\n",
+    "\n"
    ]
   },
   {
