--- a/_notebooks/2020-09-23-local-descriptors-validation.ipynb
+++ b/_notebooks/2020-09-23-local-descriptors-validation.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "Local patch descriptor is the thing, which helps you to automatically decide, if two patches in the pair of images correspond to the same point in a real world, or not. It should be robust to illumination, viewpoint and other changes. \n",
     "\n",
-    "![](2020-09-16-local-descriptors-validation_files/att_00003.png \"The task of local descriptor (neural network here) is to decide if two patches belong to the same point, or nor. Image taken from SoSNet decriptor blogpost by Vassileios Balntas https://medium.com/scape-technologies/mapping-the-world-part-4-sosnet-to-the-rescue-5383671713e7\")\n",
+    "![](2020-09-16-local-descriptors-validation_files/att_00003.png \"The task of local descriptor, neural network here, is to decide if two patches belong to the same point, or nor. Image taken from SoSNet decriptor blogpost by Vassileios Balntas https://medium.com/scape-technologies/mapping-the-world-part-4-sosnet-to-the-rescue-5383671713e7\")\n",
     "\n",
     "There are lots of ways how to implement a local patch descriptor: engineered and learned. \n",
     "Local patch descriptor is the crucial component of the [wide baseline stereo pipeline](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2020/03/27/intro.html) and a popular computer vision research topic."
