--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -16,6 +16,14 @@ year="1998",
 pages="78--92",
 }
 
+@article{pultar2020improving,
+    title={Improving the HardNet Descriptor},
+    author={Milan Pultar},
+    year={2020},
+    journal={arXiv ePrint:2007.09699}
+
+}
+
 @inproceedings{PatchExtraction2014,
   title={A few things one should know about feature extraction, description and matching},
   author={Lenc, Karel and Matas, Jir{\i} and Mishkin, Dmytro},
