--- a/_notebooks/2020-09-23-local-descriptors-validation.ipynb
+++ b/_notebooks/2020-09-23-local-descriptors-validation.ipynb
@@ -172,7 +172,7 @@
     "\n",
     "The intuition is simple: if two candidates are too similar, then the match is unreliable and it is better to drop it.\n",
     "\n",
-    "![](2020-09-16-local-descriptors-validation_files/att_00004.png \"Second nearest ratio strategy. Features from img1 (blue circles) are matched to features from img2 (red squares). For each point in img1 we calculate two nearest neighbors and check their distance ratio . If both are too similar (>0.8, bottom at Figure), then the match is discarded. Only confident matches are kept. Right graph is from SIFT paper, justification of such strategy.\")\n",
+    "![](2020-09-16-local-descriptors-validation_files/att_00004.png \"Second nearest ratio strategy. Features from img1  -- blue circles -- are matched to features from img2  -- red squares. For each point in img1 we calculate two nearest neighbors and check their distance ratio . If both are too similar, i.e. >0.8, bottom at Figure, then the match is discarded. Only confident matches are kept. Right graph is from SIFT paper, justification of such strategy.\")\n",
     "\n",
     "Somehow, none of the local patch evaluation protocols does not take such filtering criterion in mind, although it greatly influences the overall performance. \n",
     "\n",
