--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -19,18 +19,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## What is the wide baseline stereo?\n",
+    "\n",
+    "\n",
+    "![](2020-03-27-intro_files/att_00001.png \"Two images of the same place, taken from different viewpoint and in different times. The building: Kyiv doll theater.\")\n",
+    "\n",
+    "Imagine you have a nice photo you took in autumn and would like to take one in summer, from exactly the same position. How would you achieve that? You come to the place and start to compare what you see on camera screen and on printed photo. Specifically, you probably would try to locate the same objects, e.g. \"that high lamppost\" or \"this wallclock\". Then one would estimate difference how they are arranged on the old photo and camera screen, e.g. the lamppost is occluding the clock on the tower\". That would give you an idea of how you should move your camera, i.e. relative camera pose. \n",
+    "\n",
+    "\n",
+    "Now, what if you don't have that photo as is, but can have only a text description of it instead? In that case, it is likely, that you would try to list some features and objects one can see in the photo, together with some disntinctive descriptions, like \"long staircase on the left side\" and \"Nice building with dark roof and two towers\". You would also tell, where this objects are in the photo, e.g.\"The lamp posts are at the left, the closer to the viewer is in front of the left tower with clock. Tower with the clock is separate from the building itself\".\n",
+    "\n",
+    "Then, when arriving on the spot, you would try to find those objects, match them to the description you have and, again, try to estimate the where you should go. \n",
+    "\n",
+    "What I have just described is known as wide baseline stereo problem and the common way solving it.\n",
+    "\n",
+    "\n",
+    "1. Compute interest points/regions (\"trees\", \"statues\", etc) in all images independently\n",
+    "\n",
+    "2. For each interest point/region compute a descriptor of their neigborhood (\"statue with blue left ear\").\n",
+    "\n",
+    "3. Establish tentative correspondences between interest points based on their descriptors.\n",
+    "\n",
+    "4. Robustly estimate geometric relation between two images based on tentative correspondences. \"If the camera is here, then this tree should be behind the statue\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Rise of Wide Baseline Stereo\n",
     "\n",
-    "The wide baseline stereo (WBS) is a process of establishing correspondences between pixels and/or regions between\n",
-    "images depicting the same object or scene and estimation geometric relationship between the cameras, which produced that images.\n",
+    "A bit more formally, the wide baseline stereo (WBS) is a process of establishing correspondences between pixels and/or regions between images depicting the same object or scene and estimation geometric relationship between the cameras, which produced that images. It is the building block of many popular computer vision application, where spatial localization or 3D world understanding is required. \n",
     "\n",
     "![](00_intro_files/match_doll.png \"Correspondences between two views found by wide baseline stereo algorithm. Photo and doll created by Olha Mishkina\")\n",
     "\n",
     "\n",
+    "\n",
+    "**Where does wide baseline stereo come from?** \n",
+    "\n",
+    "As it often happens, the new arised from the older problem -- stereo matching, or as we will call it -- narrow or short baseline stereo. In the narrow baseline stereo images are taken from the nearby positions and not differ much in the orientation either. One could find correspondence for the point $(x,y)$ from the image $I_1$ in the image $I_2$ by simply searching in some small window around $(x,y)$\\cite{Hannah1974ComputerMO, Moravec1980} or, assuming that camera pair is calibrated -- by searching along the epipolar line\\cite{Hartley2004}.\n",
+    "\n",
+    "\n",
+    "\n",
+    "![](2020-03-27-intro_files/att_00003.png \"Correspondence search in narrow baseline stereo, from Moravec 1980 PhD thesis.\")\n",
+    "\n",
     "<!--- ![Wide baseline stereo model. \"Baseline\" is the distance between cameras. Image by Arne Nordmann (WikiMedia)](00_intro_files/Epipolar_geometry.svg) \n",
     "-->\n",
     "\n",
-    "One of the first succesful solutions for the WBS problem was proposed by Schmid and Mohr \\cite{Schmid1995} in 1995.\n",
+    "One of the first succesful approaches to the wide baseline stereo problem was proposed by Schmid and Mohr\\cite{Schmid1995} in 1995. One of the stepping stones was the corder detector by Harris and Stevens \\cite{Harris88}, initially developed for the application of tracking.\n",
+    "\n",
     "It was later extended by Beardsley, Torr and Zisserman\\cite{Beardsley96} by adding RANSAC robust geometry estimation and later refined by Pritchett and Zisserman \\cite{Pritchett1998, Pritchett1998b} in 1998. The general pipeline remains mostly the same until now \\cite{WBSTorr99, CsurkaReview2018}. The currently adopted version of the wide baseline stereo algorithm is shown below. \n",
     "\n",
     "<!--- \n",
@@ -41,7 +78,7 @@
     "![](00_intro_files/matching-filtering.png \"Commonly used wide baseline stereo pipeline\")\n",
     "\n",
     "\n",
-    "The algorithm can be summarized as the following:\n",
+    "Let's repeat the WBS algorithm again:\n",
     "\n",
     "1. Compute interest points/regions in all images independently\n",
     "2. For each interest point/region compute a descriptor of their neigborhood (local patch).\n",
@@ -170,7 +207,15 @@
    "source": [
     "# References\n",
     "\n",
+    "[<a id=\"cit-Hannah1974ComputerMO\" href=\"#call-Hannah1974ComputerMO\">Hannah1974ComputerMO</a>] M. J., ``_Computer matching of areas in stereo images._'',  1974.\n",
+    "\n",
+    "[<a id=\"cit-Moravec1980\" href=\"#call-Moravec1980\">Moravec1980</a>] Hans Peter Moravec, ``_Obstacle Avoidance and Navigation in the Real World by a Seeing Robot Rover_'',  1980.\n",
+    "\n",
+    "[<a id=\"cit-Hartley2004\" href=\"#call-Hartley2004\">Hartley2004</a>] R.~I. Hartley and A. Zisserman, ``_Multiple View Geometry in Computer Vision_'',  2004.\n",
+    "\n",
     "[<a id=\"cit-Schmid1995\" href=\"#call-Schmid1995\">Schmid1995</a>] Schmid Cordelia and Mohr Roger, ``_Matching by local invariants_'', , vol. , number , pp. ,  1995.  [online](https://hal.inria.fr/file/index/docid/74046/filename/RR-2644.pdf)\n",
+    "\n",
+    "[<a id=\"cit-Harris88\" href=\"#call-Harris88\">Harris88</a>] C. Harris and M. Stephens, ``_A Combined Corner and Edge Detector_'', Fourth Alvey Vision Conference,  1988.\n",
     "\n",
     "[<a id=\"cit-Beardsley96\" href=\"#call-Beardsley96\">Beardsley96</a>] P. Beardsley, P. Torr and A. Zisserman, ``_3D model acquisition from extended image sequences_'', ECCV,  1996.\n",
     "\n",
