--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -33,12 +33,35 @@ pages="78--92",
 }
 
 
+@phdthesis{Moravec1980,
+author = {Moravec, Hans Peter},
+title = {Obstacle Avoidance and Navigation in the Real World by a Seeing Robot Rover},
+year = {1980},
+publisher = {Stanford University}
+}
+
+@Book{Hartley2004,
+  Title                    = {Multiple View Geometry in Computer Vision},
+  Author                   = {Hartley, R.~I. and Zisserman, A.},
+  Publisher                = {Cambridge University Press, ISBN: 0521540518},
+  Year                     = {2004},
+  Edition                  = {Second}
+}
+
+
+
 @InProceedings{SingleImage3dRec2015,
 author = {Schonberger, Johannes L. and Radenovic, Filip and Chum, Ondrej and Frahm, Jan-Michael},
 title = {From Single Image Query to Detailed 3D Reconstruction},
 booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
 month = {June},
 year = {2015}
+}
+
+@phdthesis{Hannah1974ComputerMO,
+  title={Computer matching of areas in stereo images.},
+  author={M. J. Hannah},
+  year={1974}
 }
 
 
