--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -66,7 +66,7 @@
     "<!--- ![Wide baseline stereo model. \"Baseline\" is the distance between cameras. Image by Arne Nordmann (WikiMedia)](00_intro_files/Epipolar_geometry.svg) \n",
     "-->\n",
     "\n",
-    "One of the first succesful approaches to the wide baseline stereo problem was proposed by Schmid and Mohr\\cite{Schmid1995} in 1995. One of the stepping stones was the corder detector by Harris and Stevens \\cite{Harris88}, initially developed for the application of tracking.\n",
+    "One of the first succesful approaches to the wide baseline stereo problem was proposed by Schmid and Mohr\\cite{Schmid1995} in 1995. One of the stepping stones was the corner detector by Harris and Stevens \\cite{Harris88}, initially developed for the application of tracking.\n",
     "\n",
     "It was later extended by Beardsley, Torr and Zisserman\\cite{Beardsley96} by adding RANSAC robust geometry estimation and later refined by Pritchett and Zisserman \\cite{Pritchett1998, Pritchett1998b} in 1998. The general pipeline remains mostly the same until now \\cite{WBSTorr99, CsurkaReview2018}. The currently adopted version of the wide baseline stereo algorithm is shown below. \n",
     "\n",
