Updated the WBS definition

--- a/_notebooks/2020-07-09-wxbs.ipynb
+++ b/_notebooks/2020-07-09-wxbs.ipynb
@@ -21,21 +21,27 @@
    "source": [
     "### Definition of WxBS\n",
     "\n",
-    "Let us denote observations $O_{i}, i=1..n$, each of which belongs to one of the views $V_{j}, i=1..m$, $m \\leq n$. \n",
-    "Observations can be, for example, pixels and views are images, respectfully. Observations and views can be of different nature and dimentionality. E.g. $V_1$, $V_2$  - RGB images, $V_3$ - point cloud from a laser scaner, $V_4$ - image from a thermal camera, and so on. \n",
+    "Let us denote **observations** $O_{i}, i=1..n$, each of which belongs to one of the **views** $V_{j}, j=1..m$, $m \\leq n$. \n",
     "\n",
-    "We will call two of observations $(O_{i},O_{k})$, a correspondence $c_{ik}$ if they are belong to different views $V_{j}$. The group of observations is called correspondence set $C_o$, when there is exactly one observation $O_i$ per view $V_j$. Some of observations $O_i$ can be empty $\\varnothing$, i.e. not observed in the specific view $V_j$. Multiple correspondences are called **consistent** if they form a correspondence set.\n",
+    "Observation consist of spatial information and the \"descriptor\". View contains the information, which is shared and the same for a group of observations. \n",
+    "\n",
+    "For example, a single observation can be an RGB pixel. Its spatial information is the pixel coordinates and the \"descriptor\" is RGB value. The view then is the image, with information about the camera pose, camera intrinsics, sensor and the time of the photo. Some of this information can be unknown to the user, i.e. hidden variable. \n",
+    "\n",
+    "Another example could an event camera\\cite{EventCameraSurvey2020}. In that case the observation contains  the pixel coordinates and the descriptor is the sign of the intensity change. The view will contain the information about the sensor, camera pose and the single observation inside it, because every event has an unique timestamp.\n",
+    "\n",
+    "Observations and views can be of different nature and dimentionality. E.g. $V_1$, $V_2$  -- RGB images, $V_3$ -- point cloud from a laser scaner, $V_4$ -- image from a thermal camera, and so on. \n",
+    "\n",
+    "An unordered pair of observations $(O_{i},O_{k})$ forms a **correspondence** $c_{ik}$ if they are belong to different views $V_{j}$. The group of observations is called multivew correspondence $C_o$, when there is exactly one observation $O_i$ per view $V_j$. Some of observations $O_i$ can be empty $\\varnothing$, i.e. not observed in the specific view $V_j$.\n",
+    "\n",
+    "The **world model** is the set of contraints on views, observations and correspondences. For example, one the popular models are epipolar geometry and ridid motion assumption. \n",
+    "\n",
+    "The correspondence is called ground truth or veridical if it satisfy the constraints posed be the world model. \n",
     "\n",
     "We can now define a wide baseline stereo. \n",
     "\n",
-    "By **wide baseline stereo** we understand the process of establishing correspondence sets $C_o$ from observations $O_i$ and images $V_{j}$ under the following constraints:\n",
-    "- images $V_j$ belong to camera planes taken by cameras $K_j$ of the same static rigid scene $S$. \n",
+    "By \\textbf{wide baseline stereo} we understand the process of establishing two or multi-view correspondences  \\(C_o\\) from observations \\(O_i\\) and images $V_{j}$ and recovering the missing information about the views and estimatting the unknown parameters of the world model.\n",
     "\n",
-    "In addition to recovering the correspondence sets wide baseline stereo process also recovers (unknown) camera poses $K_j$. \n",
-    "\n",
-    "By \"rigid\" we mean that the only \"motion\" possible is the pose difference of the cameras, which is called \"baseline\" for the case where there are only two cameras. \n",
-    "\n",
-    "We could also assume some scene structure or model, consisting of latent objects $X_i$, which we are could only inderectly observe by observations $O_i$. \n",
+    "Most often in the current thesis we will be using the the following world model. The scene consists of 3 dimentional elements, and is rigid and static. The observations are the 2D projections to the camera plane by the projectice pinhole camera. The relationship between observations in different views is either epipolar geometry, or projective transform\\cite{Hartley2004}. Any moving object does not satisty the world model and therefore is considered an occlusion. We will call the \"baseline\" the distance between the camera centers. \n",
     "\n",
     "For example, on image below, observations $O_i$ are blue circles and the correspondences $c_{jk}$ are shown as lines. The assumed object $X_i$ is a red circle.\n",
     "\n",
@@ -61,6 +67,10 @@
    "metadata": {},
    "source": [
     "# References\n",
+    "\n",
+    "(<a id=\"cit-EventCameraSurvey2020\" href=\"#call-EventCameraSurvey2020\">Gallego, Delbruck <em>et al.</em>, 2020</a>) Gallego Guillermo, Delbruck Tobi, Orchard Garrick Michael <em>et al.</em>, ``_Event-based Vision: A Survey_'', IEEE Transactions on Pattern Analysis and Machine Intelligence, vol. , number , pp. ,  2020.\n",
+    "\n",
+    "(<a id=\"cit-Hartley2004\" href=\"#call-Hartley2004\">Hartley and Zisserman, 2004</a>) R.~I. Hartley and A. Zisserman, ``_Multiple View Geometry in Computer Vision_'',  2004.\n",
     "\n",
     "(<a id=\"cit-Mishkin2015WXBS\" href=\"#call-Mishkin2015WXBS\">Mishkin, Matas <em>et al.</em>, 2015</a>) D. Mishkin, J. Matas, M. Perdoch <em>et al.</em>, ``_WxBS: Wide Baseline Stereo Generalizations_'', BMVC,  2015.\n",
     "\n"
