--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -32,6 +32,14 @@ pages="78--92",
   year={2014}
 }
 
+@article{EventCameraSurvey2020,
+   title={Event-based Vision: A Survey},
+   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+   author={Gallego, Guillermo and Delbruck, Tobi and Orchard, Garrick Michael and Bartolozzi, 
+   Chiara and Taba, Brian and Censi, Andrea and Leutenegger, Stefan and Davison, Andrew and Conradt, Jorg and Daniilidis, Kostas.},
+   year={2020}
+}
+
 
 @phdthesis{Moravec1980,
 author = {Moravec, Hans Peter},
