--- a/_notebooks/2020-07-09-wxbs.ipynb
+++ b/_notebooks/2020-07-09-wxbs.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "We can now define a wide baseline stereo. \n",
     "\n",
-    "By \\textbf{wide baseline stereo} we understand the process of establishing two or multi-view correspondences  \\(C_o\\) from observations \\(O_i\\) and images $V_{j}$ and recovering the missing information about the views and estimatting the unknown parameters of the world model.\n",
+    "By **wide baseline stereo** we understand the process of establishing two or multi-view correspondences  $C_o$ from observations $O_i$ and images $V_{j}$ and recovering the missing information about the views and estimatting the unknown parameters of the world model.\n",
     "\n",
     "Most often in the current thesis we will be using the the following world model. The scene consists of 3 dimentional elements, and is rigid and static. The observations are the 2D projections to the camera plane by the projectice pinhole camera. The relationship between observations in different views is either epipolar geometry, or projective transform\\cite{Hartley2004}. Any moving object does not satisty the world model and therefore is considered an occlusion. We will call the \"baseline\" the distance between the camera centers. \n",
     "\n",
