--- a/_notebooks/2020-07-09-wxbs.ipynb
+++ b/_notebooks/2020-07-09-wxbs.ipynb
@@ -12,7 +12,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- hide: false\n",
-    "- search_exclude: true"
+    "- search_exclude: false"
    ]
   },
   {
