--- a/_notebooks/2020-11-25-review-of-retrieval-for-localization.ipynb
+++ b/_notebooks/2020-11-25-review-of-retrieval-for-localization.ipynb
@@ -77,11 +77,11 @@
     "\n",
     "Paper contains a lot of information and I definitely recommend you to read it. Nevertheless, let me try to summarize paper messages and then my take on it.\n",
     "\n",
-    "1. For the task1 (similarity-weighted pose) there is no clear winner. (SIFT)-DenseVLAD works the best for the daytime datasets. Probably DenseVLAD is godd because it is not invariant and if it can match images, they are really close -> high pose accuracy.  For the night both DeLG and AP-GeM are good. As paper guesses, that it because they are only ones, which were trained on night images as well.\n",
+    "1. For the task1 (similarity-weighted pose) there is no clear winner. (SIFT)-DenseVLAD works the best for the daytime datasets. Probably DenseVLAD is good because it is not invariant and if it can match images, they are really close -> high pose accuracy.  For the night both DeLG and AP-GeM are good. As paper guesses, that it because they are only ones, which were trained on night images as well.\n",
     "![image.png](2020-11-25-review-of-retrieval-for-localization_files/att_00002.png)\n",
     "\n",
     "\n",
-    "2. There is almost no difference between CNN-based methods for the task2a and task2b (retrieval -> local features matching). This indicates that the limit is the mostly \n",
+    "2. There is almost no difference between CNN-based methods for the task2a and task2b (retrieval -> local features matching). This indicates that the limit is the mostly in the number of images and local features.\n",
     "\n",
     "\n",
     "![image.png](2020-11-25-review-of-retrieval-for-localization_files/att_00003.png)\n",
