Added post about lessons and directions

--- a/_notebooks/2020-11-26-lessons-and-future-directions.ipynb
+++ b/_notebooks/2020-11-26-lessons-and-future-directions.ipynb
@@ -39,10 +39,27 @@
     "\n",
     "## 2. Trying to work for the \"most general\" case might be detrimental for the practical applications. \n",
     "\n",
-    "This is kind of opposide side of the lesson 1. For example, the classical SIFT matching is rotation-invariant, because that was assumed to be the requirement to work in the \"real world\". However, the practice of image retrieval and then most of learned local features like R2D2, SuperPoint, DELF and so on, showed that \"up-is-up\" is a reasonable assumption to built on. The rotational invariance in lots of scenarios hurt more than helps. \n",
+    "This is kind of opposite side of the lesson 1. For example, the classical SIFT matching is rotation-invariant, because that was assumed to be the requirement to work in the \"real world\". However, the practice of image retrieval and then most of learned local features like R2D2, SuperPoint, DELF and so on, showed that \"up-is-up\" is a reasonable assumption to built on. The rotational invariance in lots of scenarios hurt more than helps. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. When borrow idea from classical paper, adapt it\n",
     "\n",
+    "[HardNet](https://proceedings.neurips.cc/paper/2017/hash/831caa1b600f852b7844499430ecac17-Abstract.html) borrows the idea of the using [second nearest neighbor](https://medium.com/@ducha.aiki/how-to-match-to-learn-or-not-to-learn-part-2-1ab52ede2022)(SNN) descriptor from the SIFT. However, using SNN ratio for descriptor learning leads to inferior results. We had to modify it to the triplet margin loss."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## 4. Classic handcrafted algorithms are not dead and can be improved a lot\n",
+    " \n",
+    "Modern versions of RANSAC are still necessary for two view matching even when so complex methods as SuperGlue as used. Moreover, they still have quite a lot things for improvement, as proved by my colleague, [Daniel Barath](https://scholar.google.hu/citations?user=U9-D8DYAAAAJ&hl=en)\n",
     "\n",
-    "## 3. "
+    "They also have a benefit, that once you have an idea, you can make a paper out it faster, as you don't need gathering data and training the model.\n"
    ]
   },
   {
@@ -55,7 +72,7 @@
     "\n",
     "One thing about the current local features is that they are kind of universal. SIFT works reasonably well for lots of applications: 3d reconstruction, SLAM, image retrieval, etc. The learned features, like SuperPoint or R2D2, although are biased towards the data they are trained on, still don't have anything domain specific.\n",
     "\n",
-    "Let me explain. There are different qualities about the local feature (detectors). It can be more or less robust to nuicance factors like the illumination and camera position. It can be more or less pecisely localized. It can be more or less dense and/or evenly distributed over the image. \n",
+    "Let me explain. There are different qualities about the local feature (detectors). It can be more or less robust to nuisance factors like the illumination and camera position. It can be more or less precisely localized. It can be more or less dense and/or evenly distributed over the image. \n",
     "\n",
     "For example, in image retrieval, one does not really care about precise localization, the robustness is much more important. For the 3d reconstruction one would like to have a lot of 3d points to get the reasonable reconstruction.\n",
     "On the other hand, for the SLAM/relocalization application, sparse features would be more advantageous because of smaller memory footprint and computational cost. \n",
@@ -63,14 +80,12 @@
     "There are, actually, some steps in that direction. Let me name a few. \n",
     "\n",
     "1. [HOW local features](https://arxiv.org/pdf/2007.13172.pdf) designed for the image retrieval\n",
-    "\n",
     "![](2020-11-26-lessons-and-future-directions_files/att_00000.png \"Robust, but poorly localized HOW local features for imare retrieval, from 'Learning and aggregating deep local descriptors for instance-level recognition' paper\")\n",
     "\n",
     "2. [SIPs: Succinct Interest Points from Unsupervised Inlierness Probability Learning](http://rpg.ifi.uzh.ch/docs/3DV19_Cieslewski.pdf) sparse local features for the SLAM.\n",
-    "![](2020-11-26-lessons-and-future-directions_files/att_00001.png \"A small number of keypoints might be enough for estimating the camera pose. Figure from SIPs paper\")\n",
+    "<!--![](2020-11-26-lessons-and-future-directions_files/att_00001.png \"A small number of keypoints might be enough for estimating the camera pose. Figure from SIPs paper\") -->\n",
     "\n",
     "3. [Reinforced Feature Points: Optimizing Feature Detection and Description for a High-Level Task](https://arxiv.org/abs/1912.00623)\n",
-    "\n",
     "![](2020-11-26-lessons-and-future-directions_files/att_00002.png \"Optimizing local features for non-differentiable high-level task, Figure from Reinforced Feature Points\")\n",
     "\n",
     "\n",
@@ -127,7 +142,9 @@
     "I like the \"on-demand\" principle a lot and I think we can explore it much more that we are now. \n",
     "So far we have either [affine view synthesis (ASIFT, MODS)](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2020/08/06/affine-view-synthesis.html), or [GAN-based stylizations](https://people.ee.ethz.ch/~timofter/publications/Anoosheh-ICRA-2019.pdf) for the day-night matching. \n",
     "\n",
-    "That is why I am glad to see papers like [Single-Image Depth Prediction Makes Feature Matching Easier](https://arxiv.org/abs/2008.09497), which generate normalized views based on depth in order to help the matching. "
+    "That is why I am glad to see papers like [Single-Image Depth Prediction Makes Feature Matching Easier](https://arxiv.org/abs/2008.09497), which generate normalized views based on depth in order to help the matching. \n",
+    "\n",
+    "Why not go further? Combine viewpoint, illumination, season, sensor synthesis?"
    ]
   },
   {
@@ -138,8 +155,9 @@
     "\n",
     "I have mentioned above that monocular depth may help the feature matching or [camera pose estimation](https://ducha-aiki.github.io/wide-baseline-stereo-blog/2020/07/17/affine-correspondences.html#Back-to-wide-baseline-stereo). However, why stop here? \n",
     "\n",
-    "Let's use other networks as well, especially given that we will need then on robot or vehicle anyway. Semantic segmentation? Yes, please. Surface normals? Why not? Intirnsic images? Йой, най буде!\n",
+    "Let's use other networks as well, especially given that we will need them on robot or vehicle anyway. Semantic segmentation? Yes, please. Surface normals? Why not? Intrinsic images? Йой, най буде! {% fn 1 %} \n",
     "\n",
+    "{{ \"Ukrainian, means let is be\" | fndetail: 1 }}\n",
     "![image.png](2020-11-26-lessons-and-future-directions_files/att_00004.png)"
    ]
   },
